--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header")%>
 <div class="container">
-    <form action="/register" method="post">
+    <form action="/register" method="post" enctype="multipart/form-data">
       <div class="form-row">
          <div class="form-group col-md-6">
           <label for="name4">Full Name</label>
@@ -24,7 +24,7 @@
     </div>
     <div class="form-group col-md-6">
       <label for="exampleFormControlFile1">RESUME</label>
-        <input type="file" class="form-control" id="exampleFormControlFile1">
+        <input type="file" name="resume" class="form-control" id="exampleFormControlFile1">
     </div>
     
       </div>
